# django-blog

./: Makefile  README.md  pyproject.toml
django_blog/: settings.py  urls.py  views.py  wsgi.py
django_blog/article/: urls.py  views.py
django_blog/articles/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
django_blog/articles/migrations/: 0001_initial.py
templates/: about.html  base.html  index.html
templates/article/: index.html
templates/articles/: article.html  create.html  delete_article.html  edit.html  index.html
